<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/v_add_product_name_hint"
        android:inputType="textShortMessage" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:stretchColumns="0">

        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                style="@style/AppTheme.Text.StandardUI"
                android:gravity="center"
                android:text="@string/v_add_product_price"/>

            <EditText
                android:id="@+id/price"
                android:layout_width="100dp"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_height="match_parent"
                android:text="@string/rubbles"
                android:gravity="bottom"
                style="@style/AppTheme.Text.StandardUI" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                style="@style/AppTheme.Text.StandardUI"
                android:gravity="center"
                android:text="@string/v_add_product_quantity" />

            <EditText
                android:id="@+id/quantity"
                android:inputType="number"
                android:layout_span="2"/>
        </TableRow>

        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_add_product_tag"
                style="@style/AppTheme.Text.StandardUI"/>
            <Spinner
                android:id="@+id/tag"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/AppTheme.Text.StandardUI" />
        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_marginTop="12dp"
            android:hint="@string/v_add_product_descr_hint"
            android:minLines="2"
            android:layout_weight="1"
            android:inputType="textMultiLine" />
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="24dp"
            android:text="@string/str_cancel"/>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="24dp"
            android:text="@string/str_submit"/>
    </LinearLayout>

</LinearLayout>