<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_from"
        style="@style/AppTheme.Text.StandardUI" />

    <EditText
        android:id="@+id/lower_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_no_limit"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/str_to"
        style="@style/AppTheme.Text.StandardUI" />

    <EditText
        android:id="@+id/upper_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_no_limit"
        android:inputType="numberDecimal"/>

</LinearLayout>