<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/recipient"
            style="@style/AppTheme.Text.StandardUI"/>

        <TextView
            android:id="@+id/recipient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            style="@style/AppTheme.Text.StandardUI" />

        <TextView
            android:id="@+id/recipient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/AppTheme.Text.StandardUI" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_dark" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/pb_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/receive_way"
            style="@style/AppTheme.Text.StandardUI"/>

        <Spinner
            android:id="@+id/receive_way"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_dark" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/pb_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/payment_type"
            style="@style/AppTheme.Text.StandardUI"/>

        <Spinner
            android:id="@+id/payment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_dark" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/pb_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/extras"
            style="@style/AppTheme.Text.StandardUI"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:text="@string/gift"
            style="@style/AppTheme.Text.StandardUI"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/urgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:text="@string/urgent"
            style="@style/AppTheme.Text.StandardUI"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_dark" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/pb_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/comment"
            style="@style/AppTheme.Text.StandardUI"/>

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14sp"
            android:text="@string/str_cancel"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14sp"
            android:text="@string/str_submit"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>