<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/extras"
            style="@style/AppTheme.Text.StandardUI"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/gift_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.Text.StandardUI"
                android:text="@string/gift"/>

            <EditText
                android:id="@+id/gift_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/order_extra_price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubbles"
                style="@style/AppTheme.Text.StandardUI"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/urgent_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.Text.StandardUI"
                android:text="@string/urgent"/>

            <EditText
                android:id="@+id/urgent_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/order_extra_price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubbles"
                style="@style/AppTheme.Text.StandardUI"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_dark" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/pb_tint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="14dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.Text.StandardUI"
                android:text="@string/order_delivery"/>

            <EditText
                android:id="@+id/delivery_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/order_extra_price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubbles"
                style="@style/AppTheme.Text.StandardUI"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_dark" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/pb_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/order_items"
            style="@style/AppTheme.Text.StandardUI"
            android:layout_marginBottom="8dp"/>

        <ListView
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="14dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.Text.StandardUI"
                android:textStyle="bold"
                android:text="@string/overall"/>

            <TextView
                android:id="@+id/overall_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Text.StandardUI"
                android:textColor="@color/mark"/>
        </LinearLayout>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/order_confirm"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>